Changed height to 1.2 rem, prevent bars from expanding when text wraps.

--- a/Plot/Components/PartialComponents/ProgressBar/ProgressBar.razor.css
+++ b/Plot/Components/PartialComponents/ProgressBar/ProgressBar.razor.css
@@ -1,7 +1,7 @@
 meter
 {
   background: rgba(0,0,0,0.25);
-  height: 90%;
+  height: 1.2rem;
   border-radius: 50vh;
   width: 100%;
 }
